eks/monitoring/ingress_alertmanager.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alertmanager
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/whitelist-source-range: 131.221.227.10/32
    cert-manager.io/acme-challenge-type: "http01"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts: 
    - alertmanager-eks.homologacao.tallos.com.br
    secretName: tls-prometheus
  rules:
  - host: alertmanager-eks.homologacao.tallos.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-alertmanager
            port:
              number: 9093
